--- a/style.css
+++ b/style.css
@@ -1,33 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@700&family=Roboto:ital,wght@0,400;1,700&display=swap');
+
+#row { display: flex;}
+
+#CurrentTime {
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 #Schedule {
-            background-color: yellow;
-            width: 400px;
-            height: 300px;
+            background-color: #ff5733;
+            width: 290px;
+            height: 400px;
             padding: 20px;
-            border: 2px solid black;
-            margin: 30px;
+            border: 4px solid #ffc30f;
             max-width: 1000px;
             float: left;
+            margin-left: 80px; 
+            margin-right: 30px;
+            margin-bottom: 55px;
           }
 
 #ToDoList {
-            background-color: green;
-            width: 400px;
-            height: 300px;
+            background-color: #c70039;
+            width: 290px;
+            height: 400px;
             padding: 20px;
-            border: 2px solid black;
-            margin: 30px;
+            border: 4px solid #ffc30f;
             max-width: 1000px;
             float: left;
+            margin-left: 80px;
+            margin-right: 30px;
+            margin-bottom: 55px;
           }
 
 #Daily    {
-            background-color: white;
-            width: 400px;
-            height: 300px;
+            background-color: #900c3f;
+            width: 290px;
+            height: 400px;
             padding: 20px;
-            border: 2px solid black;
-            margin: 30px;
+            border: 4px solid #ffc30f;
             max-width: 1000px;
+            margin-left: 80px;
+            margin-right: 30px;
+            margin-bottom: 55px;
             float: left;
           }
 
@@ -37,9 +53,73 @@
 
 body  {
         font-size: 16px;
+        background: linear-gradient(to right, #581845, #9c2a7a);
       }
 
 p {
-    font-size: 20px;
+    font-size: 35px;
+    font-family: 'Roboto', sans-serif;
+    mix-blend-mode: normal;
+    text-shadow: 0px 5px 5px rgba(0,0,0,0.35);
     text-align: center;
+    color: #ffc30f;
   }
+
+h1 {
+  font-size: 50px;
+  font-family: 'Roboto', sans-serif;
+  color: #ffc30f;
+  text-align: center;
+  mix-blend-mode: normal;
+  text-shadow: 0px 5px 5px rgba(0,0,0,0.35);
+}
+
+h3{
+  text-align:center;
+  font-style: italic;
+  font-family: 'Commissioner', sans-serif;
+  color: white;
+
+}
+
+h2{
+  text-align: center;
+}
+
+#Footer {
+  text-align:center; 
+  font-style: italic;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold ; 
+  color:white;
+  padding-bottom: 20px;}
+
+li a {
+  display: block; 
+  color: white; 
+  text-align: center; 
+  text-decoration: none;
+}
+.nav {
+  border:1px; 
+  list-style:none; 
+  margin:0; 
+  padding:0; 
+  text-align:center; 
+  background-color: black
+}
+
+.nav ul{
+  list-style-type: none; 
+  margin: 0; 
+  padding: 0; 
+  overflow: hidden;
+}
+.nav li{
+  display:inline-block; 
+  padding: 2px;
+}
+.nav a{
+  display:inline-block; 
+  padding: 2px;}
+
