--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
 #Schedule {
             background-color: #ff5733;
             width: 290px;
-            height: 400px;
+            height: 800px;
             padding: 20px;
             border: 4px solid #ffc30f;
             max-width: 1000px;
             float: left;
-            margin-left: 80px; 
+            margin-left: 80px;
             margin-right: 30px;
             margin-bottom: 55px;
           }
@@ -24,7 +24,7 @@
 #ToDoList {
             background-color: #c70039;
             width: 290px;
-            height: 400px;
+            height: 800px;
             padding: 20px;
             border: 4px solid #ffc30f;
             max-width: 1000px;
@@ -37,7 +37,7 @@
 #Daily    {
             background-color: #900c3f;
             width: 290px;
-            height: 400px;
+            height: 800px;
             padding: 20px;
             border: 4px solid #ffc30f;
             max-width: 1000px;
@@ -52,18 +52,24 @@
           }
 
 body  {
-        font-size: 16px;
+        font-size: 18px;
         background: linear-gradient(to right, #581845, #9c2a7a);
       }
 
 p {
-    font-size: 35px;
+    font-size: 24px;
     font-family: 'Roboto', sans-serif;
     mix-blend-mode: normal;
     text-shadow: 0px 5px 5px rgba(0,0,0,0.35);
-    text-align: center;
+    text-align: left;
     color: #ffc30f;
+    display: inline-block;
   }
+
+button  {
+          background-color: rgba(255, 255, 155, 1);
+          float: right;
+    }
 
 h1 {
   font-size: 50px;
@@ -82,44 +88,43 @@ h3{
 
 }
 
-h2{
+h2  {
   text-align: center;
 }
 
 #Footer {
-  text-align:center; 
+  text-align:center;
   font-style: italic;
   font-family: 'Roboto', sans-serif;
-  font-weight: bold ; 
+  font-weight: bold ;
   color:white;
   padding-bottom: 20px;}
 
 li a {
-  display: block; 
-  color: white; 
-  text-align: center; 
+  display: block;
+  color: white;
+  text-align: center;
   text-decoration: none;
 }
 .nav {
-  border:1px; 
-  list-style:none; 
-  margin:0; 
-  padding:0; 
-  text-align:center; 
+  border:1px;
+  list-style:none;
+  margin:0;
+  padding:0;
+  text-align:center;
   background-color: black
 }
 
 .nav ul{
-  list-style-type: none; 
-  margin: 0; 
-  padding: 0; 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 .nav li{
-  display:inline-block; 
+  display:inline-block;
   padding: 2px;
 }
 .nav a{
-  display:inline-block; 
+  display:inline-block;
   padding: 2px;}
-
